--- a/Minesweeper/Info.plist
+++ b/Minesweeper/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to show your location on the map</string>
 </dict>
 </plist>
